fix: space and alignment ui

--- a/src/assets/styles/timesheet.scss
+++ b/src/assets/styles/timesheet.scss
@@ -54,9 +54,14 @@
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
             margin: 14px 18px 20px 18px;
             > p {
-              font-size: 16px;
+              margin: 0;
+              font-size: 15px;
               color: #272725;
               font-weight: 400;
+            }
+            h5{
+              margin: 0;
+              font-size: 18px;
             }
             .btn-flex {
               display: flex;
